force-app/main/default/objects/PartLeadTimeLevel__c/PartLeadTimeLevel__c.object-meta.xml
<CustomObject>
    <label>Part Lead Time Level</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Part Lead Time Levels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>