force-app/main/default/objects/PartLeadTimeLevel__c/fields/ConfiguredPart__c.field-meta.xml
<CustomField>
    <fullName>ConfiguredPart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ConfiguredPart</label>
    <referenceTo>ConfiguredPart__c</referenceTo>
    <relationshipLabel>Part Lead Time Levels</relationshipLabel>
    <relationshipName>PartLeadTimeLevels</relationshipName>
    <type>Lookup</type>
</CustomField>