force-app/main/default/objects/PartLeadTimeLevel__c/fields/LeadTimeDays__c.field-meta.xml
<CustomField>
    <fullName>LeadTimeDays__c</fullName>
    <label>Lead Time Days</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>