force-app/main/default/objects/PartLeadTimeLevel__c/fields/QuantityLowerLimit__c.field-meta.xml
<CustomField>
    <fullName>QuantityLowerLimit__c</fullName>
    <label>Quantity Lower Limit</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>