force-app/main/default/objects/PartLeadTimeLevel__c/fields/QuantityUpperLimit__c.field-meta.xml
<CustomField>
    <fullName>QuantityUpperLimit__c</fullName>
    <label>Quantity Upper Limit</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>