force-app/main/default/objects/PartLeadTimeLevel__c/listViews/All_PartLeadTimeLevel_Records.listView-meta.xml
<ListView>
    <fullName>All_PartLeadTimeLevel_Records</fullName>
    <columns>NAME</columns>
    <columns>ConfiguredPart__c</columns>
    <columns>LeadTimeDays__c</columns>
    <columns>Site__c</columns>
    <columns>QuantityLowerLimit__c</columns>
    <columns>QuantityUpperLimit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Part Lead Time Level Records</label>
</ListView>